# cubes

./: .gitignore  CMakeLists.txt  cones.cpp  cones.h  cubes.cpp  setup.cpp  setup.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h
shaders/: shader.fs  shader.vs
shapes/: cone.cpp  cone.h  shape.cpp  shape.h
